# gh-page

./: .gitignore  Cargo.toml  Procfile  README.md  Trunk.toml  index.html  index.scss  netlify.toml  run.sh  rust-toolchain.toml  toolchain.toml
backend/: Cargo.toml
backend/services/: Cargo.toml
backend/services/src/: lib.rs
backend/services/src/spotify/: errors.rs  mod.rs  types.rs
backend/services/src/steam/: client.rs  errors.rs  mod.rs  types.rs
backend/src/: main.rs
backend/src/routes/: spotify.rs  steam.rs
backend/src/routes/spotify/: mod.rs  types.rs
backend/static/: gh-page-28a71841d20d57f7.js  gh-page-28a71841d20d57f7_bg.wasm  gh-page-2d15b0b89ed15276.js  gh-page-2d15b0b89ed15276_bg.wasm  gh-page-34a9becdec175a03.js  gh-page-af4709e153c6c29.js  gh-page-af4709e153c6c29_bg.wasm  gh-page-c7f99511e707896d.js  gh-page-c7f99511e707896d_bg.wasm  gh-page-df45eaaaff85615b.js  gh-page-df45eaaaff85615b_bg.wasm  gh-page-e942b3cb7e36ada9.js  gh-page-e942b3cb7e36ada9_bg.wasm  index-de81f95b1b499897.css  index-e6f202137f471019.css  index.html
docs/: gh-page-a7643a76dba64a82_bg.wasm  index.html
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend/fonts/wotfard/: stylesheet.css
frontend/src/: error.rs  main.rs
frontend/src/components/: bio.rs  mod.rs  nav.rs  spotify_list.rs  steam.rs
frontend/src/services/: mod.rs  spotify.rs  steam.rs
spotify/: Cargo.toml
spotify/src/: lib.rs  types.rs
src/: main.rs
