[package]
name = "gh-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }
yew = "0.19.3"
wasm-logger = "0.2.0"

# js-sys = "0.3.46"
# web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent", "console"] }
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4.31"
# serde = "1.0.139" 
# serde_json = "1.0.82" 