[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }
reqwest = "0.11.11"
serde = "1.0.139" 
serde_json = "1.0.82" 
thiserror = "1.0.31"
base64 = "0.13.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
services = { path = "services" }