[package]
name = "gh-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }
yew = "0.19.3"
yew-hooks = "0.1.56"
wasm-logger = "0.2.0"
reqwest = "0.11.11"
serde = "1.0.139" 
serde_json = "1.0.82"
thiserror = "1.0.31" 
spotify = { path = "../spotify" }
wasm-bindgen-futures = "0.4.32" 
js-sys = "0.3.59"  
# backend = { path = "../backend" }
# tokio = { version = "1.20.1", features = [ "macros" ] }
# js-sys = "0.3.46"
# web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent", "console"] }
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4.31"

[lib]
crate-type = ["rlib", "cdylib"]