[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
serde = { version = "1.0.139", features = ["derive"] } 
serde_json = "1.0.82" 
thiserror = "1.0.31"
base64 = "0.13.0"
chrono = "0.4.20-rc.1" 